--- a/bootstrap_stater/build.gradle
+++ b/bootstrap_stater/build.gradle
@@ -41,9 +41,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-//	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter'
 	// https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter
-	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter'
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.5'
 	
 	// 타임리프 레이아웃 사용 시 간결한 문법으로 바꾸기 위한 의존성
 	// https://mvnrepository.com/artifact/nz.net.ultraq.thymeleaf/thymeleaf-layout-dialect
