웹소켓 연결만 됨

--- a/bootstrap_stater/build.gradle
+++ b/bootstrap_stater/build.gradle
@@ -45,6 +45,11 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
 	
+	// 웹소켓, SockJS, STOMP 프로토콜 관련 의존성
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.webjars:sockjs-client:1.5.1'
+    implementation 'org.webjars:stomp-websocket:2.3.4'
+	
 	// 스프링 시큐리티 의존성
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 	testImplementation 'org.springframework.security:spring-security-test'
