--- a/bootstrap_stater/build.gradle
+++ b/bootstrap_stater/build.gradle
@@ -7,6 +7,8 @@ plugins {
 group = 'com.bootstrap.study'
 version = '0.0.1-SNAPSHOT'
 
+apply plugin: 'war'		
+
 java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(21)
@@ -38,7 +40,7 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'com.mysql:mysql-connector-j'
-	runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
+	implementation 'com.oracle.database.jdbc:ojdbc11'		// implementation 로 변경
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
@@ -70,6 +72,8 @@ dependencies {
 	// 콘솔 컬러링, JPA SQL 로그 분석 등에 활용 가능한 log4j-slf4j-impl 라이브러리도 추가(선택사항)
 	// https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j2-impl
 	implementation 'org.apache.logging.log4j:log4j-slf4j2-impl'
+	
+	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 }
 
 tasks.named('test') {
