품질검사-작업지시 '대기중' 리스트 불러오기

--- a/erp_mes/build.gradle
+++ b/erp_mes/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 apply plugin: 'war'
 
-group = 'com.erp_mes.erp'
+group = 'com.erp_mes'
 version = '0.0.1-SNAPSHOT'
 
 apply plugin: 'war'
